tests/ui/traits/negative-impls/negative-specializes-positive.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/negative-specializes-positive.rs:1:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0751]: found both positive and negative implementation of trait `MyTrait` for type `u32`:
  --> $DIR/negative-specializes-positive.rs:7:1
   |
LL | impl<T> MyTrait for T {}
   | --------------------- positive implementation here
LL | impl !MyTrait for u32 {}
   | ^^^^^^^^^^^^^^^^^^^^^ negative implementation here

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0751`.
